Update cors